--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 
     <div class="stage">
-        <div class="hero"></div>
-     
-    </div>
+        <div class="hero">
+        </div>
+     </div>
 
 
 
